# human-minigame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  Makefile  README.md
include/: Game.hpp  Window.hpp  hello.hpp
include/events/: Event.hpp  KeyEvents.hpp  WindowEvent.hpp
include/shapes/: Circle.hpp  Line.hpp  Location.hpp  Point.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Circle.cpp  Game.cpp  Line.cpp  Location.cpp  Point.cpp  Window.cpp  hello.cpp  main.cpp
